--- a/Pytorch/CIFAR10/cf.ipynb
+++ b/Pytorch/CIFAR10/cf.ipynb
@@ -11,6 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Download the modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# completing all the imports"
    ]
   },
